--- a/html/SpatialConcepts/inside-outside/game_page9.html
+++ b/html/SpatialConcepts/inside-outside/game_page9.html
@@ -7,24 +7,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../../css/SpatialConcepts/inside-outside/game_page9.css">
   <link rel="stylesheet" href="../../../css/homepage/header.css">
-
-  <!-- ✅ 1. LOAD FIREBASE FIRST (WITHOUT defer) -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-
-  <!-- ✅ 2. INITIALIZE FIREBASE -->
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyCpDrWgLXXHK7_9nioEQGBKJkUv4byCEd4",
-      authDomain: "idzmir-kids-hub.firebaseapp.com",
-      projectId: "idzmir-kids-hub",
-      storageBucket: "idzmir-kids-hub.firebasestorage.app",
-      messagingSenderId: "301692363279",
-      appId: "1:301692363279:web:86c6270d0593dee46eb97a"
-    };
-    firebase.initializeApp(firebaseConfig);
-    console.log("✅ Firebase initialized");
-  </script>
 </head>
 <body>
   <!-- Header -->
@@ -86,15 +68,42 @@
     </div>
   </div>
 
-  <!-- ✅ 3. LOAD SCRIPTS IN ORDER (AFTER Firebase init) -->
-  <script src="../../../js/homepage/initHeader.js"></script>
-  <script src="../../../js/SpatialConcepts/inside-outside/game_page9.js"></script>
+  <!-- ================= SCRIPTS ================= -->
   
-  <!-- ✅ 4. INITIALIZE HEADER -->
+  <!-- 1. FIREBASE SDK (MUST BE FIRST!) -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
+  <!-- 2. FIREBASE CONFIGURATION -->
   <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      initializeHeader('../../homepage/header.html');
-    });
+    const firebaseConfig = {
+      apiKey: "AIzaSyCpDrWgLXXHK7_9nioEQGBKJkUv4byCEd4",
+      authDomain: "idzmir-kids-hub.firebaseapp.com",
+      projectId: "idzmir-kids-hub",
+      storageBucket: "idzmir-kids-hub.firebasestorage.app",
+      messagingSenderId: "301692363279",
+      appId: "1:301692363279:web:ba7c6547b36e433d6eb97a"
+    };
+
+    if (!firebase.apps.length) {
+      firebase.initializeApp(firebaseConfig);
+      console.log('✅ Firebase initialized successfully');
+    } else {
+      console.log('ℹ️ Firebase already initialized');
+    }
   </script>
+
+  <!-- 3. GAME SESSION MANAGER (CRITICAL - MUST LOAD BEFORE GAME LOGIC!) -->
+  <script src="../../../js/gameSessionManager.js"></script>
+
+  <!-- 4. GAME LOGIC -->
+  <script src="../../../js/SpatialConcepts/inside-outside/game_page9.js"></script>
+
+  <!-- 5. HEADER (LAST!) -->
+  <script src="../../../js/homepage/initHeader.js"></script>
+  <script>
+    initializeHeader('../../homepage/header.html');
+  </script>
+
 </body>
 </html>
